--- a/public/stylesheets/events.css
+++ b/public/stylesheets/events.css
@@ -182,7 +182,7 @@ div#news-lab-events section.people ul article ul {
   padding: 0;
   float: left;
   margin-left: 15px;
-  width: 60%;
+  width: 50%;
 }
 div#news-lab-events section.people ul article ul li {
     margin: 0;
@@ -229,6 +229,14 @@ div#news-lab-events section.articles ol li a span {
   overflow: hidden;
   text-overflow: ellipsis;
   color: #156292;
+}
+div#news-lab-events section.people section.articles ol li a span {
+  display: block;
+  width: 75%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #ffffff;
 }
 div#news-lab-events section.articles ol li:nth-child(n) a:after {
   content: counter(li);
