Change News mast head title

--- a/views/modules/_news_mast_head.erb
+++ b/views/modules/_news_mast_head.erb
@@ -8,7 +8,7 @@
 	        <div id="header-wrapper">
 	            <h2 id="header">
 	              <a rel="index" href="http://www.bbc.co.uk/news/"><img alt="BBC News" src="/images/articles/news-blocks.gif"></a>
-	              <span class="section-title">Europe</span>
+	              <span class="section-title">Events</span>
 	            </h2>
 	            <div id="blq-local-nav">
 	              <ul id="nav" class="nav">
