--- a/views/news_articles.erb
+++ b/views/news_articles.erb
@@ -1,42 +1,4 @@
 <%= erb :'modules/_news_mast_head' %>
-<!--
-<div id="blq-container-outer" class="blq-journalism-domestic blq-ltr">
-  <div id="blq-container" class="blq-lang-en-GB">
-    <div id="blq-container-inner" xml:lang="en-GB">
-      <div id="blq-main" class="blq-clearfix">
-        <div class="europe  has-no-ticker ">
-          <div id="header-wrapper">
-            <h2 id="header">
-              <a rel="index" href="http://www.bbc.co.uk/news/"><img alt="BBC News" src="/images/articles/news-blocks.gif"></a>
-              <span class="section-title">Europe</span>
-            </h2>
-            <div id="blq-local-nav">
-              <ul id="nav" class="nav">
-                <li class="first-child "><a href="http://www.bbc.co.uk/news/">Home</a></li>
-                <li class="selected"><a href="http://www.bbc.co.uk/news/world/">World</a></li>
-                <li><a href="http://www.bbc.co.uk/news/uk/">UK</a></li>
-                <li><a href="http://www.bbc.co.uk/news/england/">England</a></li>
-                <li><a href="http://www.bbc.co.uk/news/northern_ireland/">N. Ireland</a></li>
-                <li><a href="http://www.bbc.co.uk/news/scotland/">Scotland</a></li>
-                <li><a href="http://www.bbc.co.uk/news/wales/">Wales</a></li>
-                <li><a href="http://www.bbc.co.uk/news/business/">Business</a></li>
-                <li><a href="http://www.bbc.co.uk/news/politics/">Politics</a></li>
-                <li><a href="http://www.bbc.co.uk/news/health/">Health</a></li>
-                <li><a href="http://www.bbc.co.uk/news/education/">Education</a></li>
-                <li><a href="http://www.bbc.co.uk/news/science_and_environment/">Sci/Environment</a></li>
-                <li><a href="http://www.bbc.co.uk/news/technology/">Technology</a></li>
-                <li><a href="http://www.bbc.co.uk/news/entertainment_and_arts/">Entertainment &amp; Arts</a></li>
-              </ul>
-              <ul id="sub-nav" class="nav"> 
-                <li class="first-child "><a href="http://www.bbc.co.uk/news/world/africa/">Africa</a></li>
-                <li><a href="http://www.bbc.co.uk/news/world/asia/">Asia</a></li>
-                <li class="selected"><a href="http://www.bbc.co.uk/news/world/europe/">Europe</a></li>
-                <li><a href="http://www.bbc.co.uk/news/world/latin_america/">Latin America</a></li>
-                <li><a href="http://www.bbc.co.uk/news/world/middle_east/">Middle East</a></li>
-                <li><a href="http://www.bbc.co.uk/news/world/us_and_canada/">US &amp; Canada</a></li>
-              </ul>
-            </div>
--->
             <div id="content-wrapper" class="domestic">
               <div id="main-content" class="story blq-clearfix">
                 <div class="layout-block-a">
@@ -79,9 +41,8 @@
                     <div class="videoInStoryB">
                       <div id="emp-19905573-49629" class="emp page-bookmark-link-aware" style="position: relative; cursor: pointer;">
                         <% if not @page[:article].image == "http://news-labs-events-prototype.herokuapp.com/images/event/event-placeholder.jpeg" %>
-                          <img src="<%=@page[:article].image%>" width="448" height="252"><a title="Click to play" style="background-color: rgb(0, 0, 0); opacity: 0.75; width: 80px; height: 80px; display: block; position: absolute; left: 0px; top: 50%; margin-top: -40px; "></a><a title="Click to play" style="background-color: rgb(255, 0, 0); opacity: 0; width: 80px; height: 80px; display: block; position: absolute; left: 0px; top: 50%; margin-top: -40px; "></a>
-                        <% end %>
-                        <div style="background-image: url(http://emp.bbci.co.uk/emp/releases/worldwide/revisions/749603_749269_749444_6/cta_play.png); width: 27px; height: 36px; display: block; position: absolute; top: 50%; left: 26px; margin-top: -18px; "></div>
+                          <img src="<%=@page[:article].image%>" width="448" height="252">
+                        <% end %>                        
                       </div>
                       <p class="caption"><%=@page[:article].description%></p>
                       <!-- END - caption -->										
