--- a/views/modules/_news_mast_head.erb
+++ b/views/modules/_news_mast_head.erb
@@ -7,8 +7,7 @@
         <div class="europe  has-no-ticker ">        
 	        <div id="header-wrapper">
 	            <h2 id="header">
-	              <a rel="index" href="http://www.bbc.co.uk/news/"><img alt="BBC News" src="/images/articles/news-blocks.gif"></a>
-	              <span class="section-title">Events</span>
+	              <a rel="index" href="http://www.bbc.co.uk/news/"><img alt="BBC News Labs" src="/images/articles/news-blocks.gif"></a>
 	            </h2>
 	            <div id="blq-local-nav">
 	              <ul id="nav" class="nav">
