--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>BBC <%=@page[:domain][:display_name] %> - Events</title>
+    <title>BBC News Labs - Events</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -28,15 +28,12 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/articles/type.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/global.css" />
 	<link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/articles/skin.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/events.css">
-			    
-    <script type="text/javascript" data-main="/javascripts/main" src="/javascripts/require-jquery.js"></script>    
+	<link rel="stylesheet" type="text/css" href="/stylesheets/events.css">        
     <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
 	<!-- Events page assets -->
-	<% end %>
-	
+	<% end %>	
 	<%= erb :'modules/orb/_head' %>
-
+	<script type="text/javascript" data-main="/javascripts/main" src="/javascripts/require-jquery.js"></script>
   </head>
   <script type="text/javascript">
 
